Use Integer.valueOf